kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jobofferings-ingress
  namespace: workerhub
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: workerhub.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jobofferings-service
                port:
                  number: 80
